# ayon-airtable

./: README.md  create_package.py  package.py  pyproject.toml
client/: pyproject.toml
client/ayon_airtable/: __init__.py  addon.py  version.py
client/ayon_airtable/backend/: __init__.py  communication_server.py  rest_api.py  rest_routes.py  rest_stub.py
client/ayon_airtable/backend/api/: __init__.py
client/ayon_airtable/common/: __init__.py  airtable_api_handlers.py
client/ayon_airtable/plugins/publish/: collect_airtable_api.py  collect_product_name_for_editorial_return.py  integrate_editorial_return.py
client/ayon_airtable/tray/: dialog.py
server/: __init__.py
server/settings/: __init__.py  main.py
service_tools/: Makefile  example_env  main.py  manage.ps1  requirements.txt
services/leecher/: Dockerfile  Makefile  README.md  docker-compose.yml  manage.ps1  pyproject.toml  sample_env
services/leecher/leecher/: __init__.py  __main__.py  listener.py
services/processor/: Dockerfile  Makefile  README.md  docker-compose.yml  manage.ps1  pyproject.toml
services/processor/processor/: __init__.py  __main__.py  processor.py
services/processor/processor/handlers/: sync_from_airtable_handlers.py
services/transmitter/: Dockerfile  Makefile  README.md  docker-compose.yml  manage.ps1  pyproject.toml  sample_env
services/transmitter/transmitter/: __init__.py  __main__.py  transmitter.py
services/transmitter/transmitter/handlers/: sync_from_ayon.py
